# BeatBoxer

./: .gitignore  .pre-commit-config.yaml  midi_converter.py  pyproject.toml
beatboxer/midi_processing/: midi_to_text.py  text_to_midi.py
tests/: conftest.py  test_midi_processing.py
tests/midi_processing/: test_midi_to_text.py  test_test_to_midi.py
