[tool.poetry]
name = "beatboxer"
version = "0.1.0"
description = "Beatboxer project for generating music using MIDI to text conversion"
authors = ["Ram"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
